<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="217dp"
        android:layout_height="99dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/picture" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="109dp"
        android:layout_height="47dp"
        android:text="@string/sign_up"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/textView3"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_surname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/textView5"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.466"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/textView4"
        android:layout_width="221dp"
        android:layout_height="54dp"
        android:layout_marginTop="92dp"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.007"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/textView6"
        android:layout_width="234dp"
        android:layout_height="48dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.827"
        tools:ignore="Autofill" />

    <DatePicker
        android:id="@+id/dialog_button"
        android:layout_width="221dp"
        android:layout_height="83dp"
        android:calendarTextColor="@color/black"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.681" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="222dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.927"
        tools:ignore="Autofill" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="141dp"
        android:layout_height="49dp"
        android:autofillHints="tell NO"
        android:entries="@array/phone_array"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_button"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="171dp"
        android:layout_height="56dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.057"
        tools:ignore="Autofill" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginBottom="64dp"
        android:text="@string/accept_terms_and_conditions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="Create_Account"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

</androidx.constraintlayout.widget.ConstraintLayout>